--- a/artist4all_angular/src/app/components/secure/settings/user-settings-profile/user-settings-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/settings/user-settings-profile/user-settings-profile.component.html
@@ -167,13 +167,13 @@
                 <div class="mt-1 lg:hidden">
                   <div class="flex items-center">
                     <div class="flex-shrink-0 inline-block rounded-full overflow-hidden h-12 w-12" aria-hidden="true">
-                      <img class="rounded-full h-full w-full" src="http://localhost:81/assets/img/{{ imgAvatar }}" alt="img_avatar">
+                      <img class="object-cover h-full w-full" src="http://localhost:81/assets/img/{{ imgAvatar }}" alt="img_avatar">
                     </div>
                   </div>
                 </div>
 
                 <div class="hidden relative rounded-full overflow-hidden lg:block">
-                  <img class="relative rounded-full w-40 h-40" src="http://localhost:81/assets/img/{{ imgAvatar }}" alt="img_avatar">
+                  <img class="relative object-cover w-40 h-40" src="http://localhost:81/assets/img/{{ imgAvatar }}" alt="img_avatar">
                   <label for="user-photo"
                     class="absolute inset-0 w-full h-full bg-black bg-opacity-75 flex items-center justify-center text-sm font-medium text-white opacity-0 hover:opacity-100 focus-within:opacity-100">
                     <span>Cambiar</span>
