--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -54,7 +54,16 @@
               <input (keypress)="searchUser($event)" id="search" name="search" class="hidden md:block w-full bg-white border border-gray-300 rounded-md py-2 pl-10 pr-3 text-sm
               placeholder-gray-500 focus:outline-none focus:text-gray-900 focus:placeholder-gray-400 focus:ring-1
               focus:ring-rose-500 focus:border-rose-500 sm:text-sm" placeholder="Buscar usuarios" type="search">
+              
             </div>
+            <!-- search box -->
+            <div class="hidden md:block w-full bg-white border border-gray-300 rounded-md py-3 pl-10 pr-3 text-sm
+              placeholder-gray-500 focus:outline-none focus:text-gray-900 focus:placeholder-gray-400 focus:ring-1
+              focus:ring-rose-500 focus:border-rose-500 sm:text-sm">
+              <img class="rounded-full inline-block" src="assets/img/avatar2.jpg" alt="imgAvatar" style="width: 37px; height: 37px; margin-top:5px;">
+              <p class="inline-block">Nombre de artista</p>
+          </div>
+              
           </div>
         </div>
       </div>
