--- a/artist4all_angular/src/app/components/secure/user-sidebar/user-sidebar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-sidebar/user-sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="hidden lg:block lg:col-span-3 xl:col-span-2">
   <nav aria-label="Sidebar" class="sticky top-4 divide-y divide-gray-300">
     <div class="pb-8 space-y-1">
-      <a href="#" class="bg-gray-200 text-gray-900 group flex items-center px-3 py-2 text-sm font-medium rounded-md"
+      <a href="/home" class="bg-gray-200 text-gray-900 group flex items-center px-3 py-2 text-sm font-medium rounded-md"
         aria-current="page">
         <svg class="text-gray-500 flex-shrink-0 -ml-1 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
           viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -13,7 +13,7 @@
         </span>
       </a>
 
-      <a href="#"
+      <a href="/store"
         class="text-gray-600 hover:bg-gray-50 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
         <svg class="text-gray-400 group-hover:text-gray-500 flex-shrink-0 -ml-1 mr-3 h-6 w-6"
           xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -37,18 +37,6 @@
         </svg>
         <span class="truncate">
           <a routerLink="/message" class="p-3 hover:text-purple-600">Mensajería</a>
-        </span>
-      </a>
-
-      <a href="#"
-        class="text-gray-600 hover:bg-gray-50 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
-        <!-- Heroicon name: outline/trending-up -->
-        <svg class="text-gray-400 group-hover:text-gray-500 flex-shrink-0 -ml-1 mr-3 h-6 w-6"
-          xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" />
-        </svg>
-        <span class="truncate">
-          <a routerLink="/user/list" class="p-3 hover:text-purple-600">Usuarios</a>
         </span>
       </a>
     </div>
