--- a/artist4all_angular/src/app/components/secure/home/home.component.html
+++ b/artist4all_angular/src/app/components/secure/home/home.component.html
@@ -50,20 +50,6 @@
                 <a routerLink="/user/{{ id }}/messages" class="hover:text-gray-200">Mensajería</a>
               </span>
             </a>
-
-            <a routerLink="/user/list"
-              class="text-gray-200 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
-              <!-- Heroicon name: outline/trending-up -->
-              <svg class="text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6"
-                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-                aria-hidden="true">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" />
-              </svg>
-              <span class="truncate">
-                <a routerLink="/user/list" class="hover:text-gray-200">Usuarios</a>
-              </span>
-            </a>
           </div>
         </nav>
       </div>
@@ -76,6 +62,7 @@
           <label for="imgPublication" >
             <svg class="w-7 h-7 relative cursor-pointer text-gray-800" style="margin-top:-6%; margin-left:3%;" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path></svg>
           </label>
+          <!-- TODO: button desselect images -->
           <input class="hidden" type="file" #imgPublication (change)="addImgPublication($event.target.files)" id="imgPublication" name="imgPublication[]" ng-model="files" multiple="multiple"/>
           <!--<button class="inline-block w-6/12" type="button" (click)="removeSelectedImgs()">Eliminar las imágenes</button>-->
         <img *ngFor='let url of images'  class="inline-block" [src]="url" height="150" width="200px" style="margin: 5px;"> <br/>
