styled no followers

--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -53,7 +53,7 @@
                   focus:ring-rose-500 focus:border-rose-500 sm:text-sm" routerLink="/user/{{ user.id }}/profile">
                     <img class="object-cover rounded-full inline-block" src="http://localhost:81/assets/img/{{ user.imgAvatar }}"
                       alt="imgAvatar" style="width: 37px; height: 37px; margin-right: 10px; margin-top:5px;">
-                    <p class="inline-block cursor-pointer">{{ user.username }}</p>
+                    <p class="inline-block cursor-pointer hover:bg-purple-700">{{ user.username }}</p>
                   </div>
                 </div>
 
