--- a/artist4all_angular/src/app/components/secure/profile/list-of-followers-or-followed/list-of-followers-or-followed.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/list-of-followers-or-followed/list-of-followers-or-followed.component.html
@@ -48,10 +48,15 @@
       </div>
     </nav>
   </div>
-
-  <div *ngIf="userlist == null && typeList  == 'followers'"> Todavía no tienes ningún seguidor </div>
+  <div class="col-span-3"></div>
+  <div *ngIf="userlist == null && typeList  == 'followers'" class="col-span-6">
+    <i class="fas fa-users-slash inline-block mr-6" style="font-size: 25px;"></i><p class=" text-2xl content-center mt-16 inline-block">Todavía no tienes ningún seguidor</p>
+  </div>
+  <div *ngIf="userlist == null && typeList == 'followed'" class="col-span-6"> 
+    <i class="fas fa-users-slash inline-block mr-6" style="font-size: 25px;"></i><p class=" text-2xl content-center mt-16 inline-block">Todavía no sigues a ningún usuario </p>
+  </div>
+  <div class="col-span-2"></div>
   <div class="block lg:col-span-4 pt-8">
-    <div *ngIf="userlist == null && typeList == 'followed'"> Todavía no sigues a ningún usuario </div>
     <div *ngIf="userlist != null">
       <section *ngFor="let user of userlist; index as i;">
 
